# bare-metal-stm32f4-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  linker.ld  project.yml
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
include/: clock.h  fault_handlers.h  main.h
linker/: stm32f401xe.ld
scripts/: build_f401re.sh  flash.sh
src/: clock.c  fault_handlers.c  main.c
startup/: stm32f401xe.ld
test/: test_sample.c
